--- a/ghibli.css
+++ b/ghibli.css
@@ -39,7 +39,7 @@ p {
     text-align: center;
 }
 
-.nextsec {
+.chars {
     font-family: sans-serif;
     position: relative;
     text-align: center;
