--- a/ghibli.css
+++ b/ghibli.css
@@ -4,6 +4,9 @@
     color: white;
     font-family: sans-serif;
 } */
+.navbar {
+    height: 50px;
+}
 .p-5 {
     position: relative;
     width: 100%;
@@ -26,17 +29,19 @@
 
 .ghiblilogo {
 position: relative;
-left: 550px;
-height: 90px;
-bottom: 50px; 
+left: 900px;
+width: auto;
+height:auto;
+max-height: 45px;
+
 }
 
 p {
     position: relative;
-    vertical-align: center;
+    top: 100px;
     font-family: sans-serif;
     align-items: center;
-    text-align: center;
+    /* text-align: right; */
 }
 
 .chars {
@@ -47,7 +52,8 @@ p {
 
 .characters {
     position: relative;
-    text-align: left;
+    text-align: center;
+    left: 500px;
     background-color:rgb(40, 75, 109);
     color: white;
     list-style-type: none;
@@ -55,7 +61,7 @@ p {
 } 
 .films {
     position: relative;
-    text-align: left;
+    text-align: center;
     background-color:rgb(40, 75, 109);
     color: white;
     list-style-type: none;
@@ -64,5 +70,12 @@ p {
 
 body {
     background-color: rgb(40, 75, 109);
+}
+
+img,svg {
+    size: auto;
+    max-height: 300px;
+    position: relative;
+    right:400px;
 }
 
